--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.0",
     "@mui/material": "^5.6.0",
+    "gsap": "^3.10.4",
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "slugify": "^1.6.5"
+    "slugify": "^1.6.5",
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
+    "@types/node": "^17.0.23",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4"
   }
